--- a/garden/garden.html
+++ b/garden/garden.html
@@ -2,7 +2,12 @@
 
 <title>Bad Idea Archive</title>
 <meta name="viewport" width="device-width, initial-scale=1.0"></meta>
-<link rel="stylesheet" href="midnighthaze.css"></link>
+<link rel="stylesheet" href="garden.css"></link>
 <link rel="stylesheet" href = "../global.css"></link>
+
+<section id="topBar">
+    <img src="images/gardenlogo.png" alt "Archive">
+    <h2><em>"A place to rest"</em></h2>
+</section>
 
 <iframe src="../social/social.html" id="socialFrame"></iframe>
